<resources>

    <string name="app_name">Cue Point</string>
    <string name="menu_settings">Opciones</string>
    <string name="title_activity_main">Menú Principal</string>
    <string name="button_send">Enviar</string>
    <string name="plano_seleccion">Seleccione un plano</string>
    <string name="nombre_lugar">Nombre Lugar</string>
    <string name="descripcion">Descripcion</string>
    <string name="marcar_ubicacion">Marque su ubicación en el mapa</string>
    <string name="enviarSMS">Enviar SMS</string>
    <string name="bienvenido_a">Bienvenido a</string>
    <string name="touch_para_entrar">Touch para entrar</string>
    <string name="design">Creado por Max Nikolaus y Silvio Kucharski</string>
    <string name="enviar_solicitud">Solicitar ubicación</string>
    <string name="enviar_posicion">Enviar posición</string>
    <string name="ver_boletin">Ver boletín</string>
    <string name="actualizar_boletin">Actualizar boletin</string>
    <string name="ayuda">Ayuda</string>
    <string name="preferencias">Preferencias</string>
    <string name="seleccionar_contacto">Seleccione un contacto</string>
    <string name="enviar_sms">Solicitar ubicación</string>
    <string name="cambiar">Cambiar</string>
    <string name="mensaje">Mensaje (opcional)</string>
    <string name="enviar">Enviar</string>
    <string name="cancelar">Cancelar</string>
    <string name="caracteres">60</string>
    <string name="mensajes">Mensajes</string>
    <string name="boletin">Boletin</string>
    <string name="zoom">Zoom</string>
    <string name="abrir">Abrir</string>
    <string name="mensajes_enviados">Mensajes enviados</string>
    <string name="mensajes_recibidos">Mensajes recibidos</string>
    <string name="ayudaCP">CuePoint es una aplicación que le permite compartir su ubicación dentro de un edificio con sus amigos.\n
Para enviar su posición realice los siguientes pasos:\n
1	Desde el menú principal de la aplicación haga click en Enviar Marcador\n
2	Marque su posición (o la posición que desea enviar) en el plano\n
3	Haga click en enviar\n
4	Seleccione el usuario a quien desea enviar el marcador\n
5	(Opcional) Escriba un mensaje corto (hasta 60 caracteres)\n
6	Haga click en enviar\n
        
    </string>
    <string name="buscar_contacto">Buscar contacto</string>

</resources>