<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayoutImagen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marcar_ubicacion"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageViewPlano"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_gravity="center|center_horizontal"
        android:layout_weight="0.16"
        android:adjustViewBounds="false"
        android:contentDescription="@string/plano_seleccion"
        android:duplicateParentState="true"
        android:minHeight="100sp"
        android:minWidth="300sp"
        android:scaleType="matrix" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

	    <ImageView
	        android:id="@+id/zoomout"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:contentDescription="@string/zoom"
	        android:src="@drawable/zoom_out" />
	
		<SeekBar
		    android:id="@+id/seekBarZoom"
		    android:layout_width="242dp"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical"
		    android:max="100"
		    android:progress="0" />

		<ImageView
		    android:id="@+id/zoomin"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:contentDescription="@string/zoom"
		    android:src="@drawable/zoom_in" />

    </LinearLayout>

</LinearLayout>